--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -9,68 +9,57 @@
   right: 0;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100vh !important;
   z-index: 30 !important;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row; }
+  flex-direction: column;
+  overflow: hidden !important; }
 
 .modalBG {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
   background-color: rgba(172, 170, 170, 0.637);
   height: 500px;
   width: 1000px;
   border-radius: 5px; }
-  .modalBG .exit {
-    position: absolute;
-    top: 80px;
-    right: 100px; }
-  .modalBG .closeButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    background-color: rgba(37, 37, 37, 0.699);
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.253);
-    color: grey;
-    padding-top: 2px;
-    height: 40px;
-    width: 110px;
-    cursor: pointer;
-    font-family: 'Neutra Semibold';
-    letter-spacing: 1px;
-    border-radius: 0px; }
-    .modalBG .closeButton:hover {
-      transition: .3s;
-      background-color: rgba(172, 170, 170, 0.637);
-      color: black; }
 
-@media screen and (max-width: 1400px) {
-  .exit {
-    position: absolute;
-    top: 80px;
-    right: 40px !important; } }
+.exit {
+  margin-left: 890px;
+  margin-bottom: 50px; }
 
-@media screen and (max-width: 1400px) {
-  .exit {
-    position: absolute;
-    top: 80px;
-    right: 30px !important; } }
+.closeButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(37, 37, 37, 0.699);
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.253);
+  color: grey;
+  padding-top: 2px;
+  height: 40px;
+  width: 110px;
+  cursor: pointer;
+  font-family: 'Neutra Semibold';
+  letter-spacing: 1px;
+  border-radius: 0px; }
+  .closeButton:hover {
+    transition: .3s;
+    background-color: rgba(172, 170, 170, 0.637);
+    color: black; }
 
 @media screen and (max-width: 1015px) {
   .modalBG {
-    width: 950px; } }
+    width: 950px; }
+  .exit {
+    margin-left: 835px; } }
 
 @media screen and (max-width: 960px) {
   .modalBG {
     width: 900px; }
   iframe {
-    width: 840px !important; } }
+    width: 840px !important; }
+  .exit {
+    margin-left: 790px; } }
 
 @media screen and (max-width: 920px) {
   .modalBG {
@@ -79,11 +68,13 @@
   .modalVideoParent {
     margin-top: 10px !important; }
   iframe {
-    width: 740px !important; } }
+    width: 740px !important; }
+  .exit {
+    margin-left: 690px; } }
 
 @media screen and (max-width: 820px) {
   .exit {
-    top: 200px !important; }
+    margin-left: 570px; }
   .modalBG {
     width: 680px;
     height: 400px; }
@@ -95,6 +86,8 @@
     width: 640px !important; } }
 
 @media screen and (max-width: 720px) {
+  .exit {
+    margin-left: 470px; }
   .modalBG {
     width: 580px;
     height: 350px; }
@@ -107,7 +100,7 @@
 
 @media screen and (max-width: 620px) {
   .exit {
-    top: 250px !important; }
+    margin-left: 370px; }
   .modalBG {
     width: 480px;
     height: 300px; }
@@ -120,12 +113,13 @@
 
 @media screen and (max-width: 480px) {
   .exit {
-    top: 300px !important; }
+    margin-left: 330px;
+    z-index: 100; }
   .modalBG {
     width: 440px;
     height: 250px; }
   .modalVideoParent {
-    margin-top: -90px !important; }
+    margin-top: -80px !important; }
     .modalVideoParent .videoDescription {
       margin-top: -90px; }
   iframe {
@@ -133,7 +127,7 @@
 
 @media screen and (max-width: 420px) {
   .exit {
-    top: 350px !important; }
+    margin-left: 260px; }
   .modalBG {
     width: 380px;
     height: 250px; }
@@ -144,13 +138,9 @@
   iframe {
     width: 360px !important; } }
 
-@media screen and (max-width: 417px) {
-  .exit {
-    top: 300px !important; } }
-
 @media screen and (max-width: 400px) {
   .exit {
-    top: 330px !important; }
+    margin-left: 200px; }
   .modalBG {
     width: 320px;
     height: 200px; }
