--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,4 +1,11 @@
 .footerBG {
   background-color: var(--color-white);
   height: 300px;
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: baseline; }
+
+.footerContent {
+  margin-top: 30px;
+  font-size: 22px; }
