--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,4 +2,12 @@
     background-color: var(--color-white);
     height: 300px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.footerContent {
+    margin-top: 30px;
+    font-size: 22px;
 }
