--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -5,7 +5,7 @@
   flex-direction: column; }
 
 .landingHeader {
-  background: url("../../images/images/supima-header-web.jpg");
+  background: url("https://res.cloudinary.com/scottisyoung/image/upload/v1529018376/Malouf/resized%20images/supima-header-web.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
@@ -238,7 +238,10 @@
     .bg-light-grey .pillowTitle h3 {
       letter-spacing: 1px; }
     .bg-light-grey .pillowTitle #sup {
-      font-size: 18px; }
+      font-size: 16px;
+      vertical-align: baseline;
+      position: relative;
+      top: 0.2em; }
       .bg-light-grey .pillowTitle #sup h3 {
         letter-spacing: 1px; }
   .bg-light-grey .pillowTitle2 {
@@ -326,7 +329,7 @@
       font-weight: 500;
       letter-spacing: 1px; }
     .bg-light-grey .randomPicsParent #supStructures {
-      font-size: 11px; }
+      font-size: 10px; }
     .bg-light-grey .randomPicsParent sup {
       vertical-align: baseline;
       position: relative;
@@ -772,6 +775,18 @@
   .pillows2 {
     display: unset !important;
     height: 190px; }
+  #pillowReg {
+    font-size: 9px; }
+  #pillowSup {
+    font-size: 9px; }
+  #supStructures {
+    position: relative;
+    right: 3.5px;
+    font-size: 8px; }
+  sup {
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em; }
   .rowPillows {
     display: flex;
     justify-content: center;
@@ -914,6 +929,10 @@
     height: 1950px; }
   .wovenImg {
     margin-right: 20px !important; }
+  .linenImgs {
+    margin-right: 70px !important;
+    margin-left: 70px !important;
+    height: 180px !important; }
   .videoThumb {
     width: 750px !important;
     height: 375px !important; }
@@ -966,9 +985,11 @@
     margin-right: 50px !important;
     height: 380px !important;
     width: 560px !important; }
-  .linenParent {
-    margin-right: 20px;
-    margin-left: 20px; }
+  .linenImgs {
+    margin-right: 80px !important;
+    margin-left: 80px !important;
+    height: 180px !important;
+    width: 190px; }
   .videoParent {
     margin-top: 200px; }
   .videoThumb {
@@ -985,15 +1006,19 @@
     display: unset !important;
     height: 130px; }
   .thank {
-    margin-top: 880px !important; } }
+    margin-top: 880px !important; }
+  .linenParent {
+    display: flex;
+    flex-wrap: wrap; } }
 
-@media screen and (max-width: 699px) {
+@media screen and (max-width: 716px) {
+  .linenParent {
+    display: flex;
+    flex-wrap: wrap !important; }
   .productBG {
     height: 2750px !important; } }
 
 @media screen and (max-width: 667px) {
-  .productBG {
-    height: 2750px !important; }
   .videoThumb {
     width: 600px !important;
     height: 370px !important; }
