--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,9 +1,3 @@
-@mixin flex-center($direction: row, $justify: center, $align: center) {
-    display: flex;
-    justify-content: $justify;
-    align-items: $align;
-    flex-direction: $direction;
-}
 
 .modalPageBG {
         background: rgba(27, 24, 24, 0.96);
@@ -16,67 +10,59 @@
     right: 0;
     left: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100vh !important;
     z-index: 30 !important;
-    @include flex-center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden !important;
 }
 
 .modalBG {
-    @include flex-center;
     background-color: rgba(172, 170, 170, 0.637);
     height: 500px;
     width: 1000px;
     border-radius: 5px;
+}
 
-    .exit {
-        position: absolute;
-        top: 80px;
-        right: 100px;
-    }
+.exit {
+    margin-left: 890px;
+    margin-bottom: 50px;
+}
 
-    .closeButton {
-        @include flex-center;
-        background-color: rgba(37, 37, 37, 0.699);
-        box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.253);
-        color: grey;
-        padding-top: 2px;
-        height: 40px;
-        width: 110px;
-        cursor: pointer;
-        font-family: 'Neutra Semibold';
-        letter-spacing: 1px;
-        border-radius: 0px;
+.closeButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(37, 37, 37, 0.699);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.253);
+    color: grey;
+    padding-top: 2px;
+    height: 40px;
+    width: 110px;
+    cursor: pointer;
+    font-family: 'Neutra Semibold';
+    letter-spacing: 1px;
+    border-radius: 0px;
 
-        &:hover {
-            transition: .3s;
-            background-color: rgba(172, 170, 170, 0.637);
-            color: rgb(0, 0, 0);
-        }
+    &:hover {
+        transition: .3s;
+        background-color: rgba(172, 170, 170, 0.637);
+        color: rgb(0, 0, 0);
     }
 }
 
 //////  Modal Media Queries /////////////////////////////////////////////////////////////////////////////////////
 
-@media screen and(max-width: 1400px) {
-    .exit {
-        position: absolute;
-        top: 80px;
-        right: 40px !important;
-    }
-}
-
-@media screen and(max-width: 1400px) {
-    .exit {
-        position: absolute;
-        top: 80px;
-        right: 30px !important;
-    }
-}
-
 @media screen and(max-width: 1015px) {
     .modalBG {
         width: 950px;
+    }
+
+    .exit {
+        margin-left: 835px;
     }
 }
 
@@ -87,6 +73,10 @@
 
     iframe {
         width: 840px !important; 
+    }
+
+    .exit {
+        margin-left: 790px;
     }
 }
 
@@ -103,12 +93,16 @@
     iframe {
         width: 740px !important; 
     }
+
+    .exit {
+        margin-left: 690px;
+    }
 }
 
 @media screen and(max-width: 820px) {
 
     .exit {
-        top: 200px !important;
+        margin-left: 570px;
     }
     .modalBG {
         width: 680px;
@@ -129,6 +123,10 @@
 }
 
 @media screen and(max-width: 720px) {
+    
+    .exit {
+        margin-left: 470px;
+    }
 
     .modalBG {
         width: 580px;
@@ -151,7 +149,7 @@
 @media screen and(max-width: 620px) {
 
     .exit {
-        top: 250px !important;
+        margin-left: 370px;
     }
 
     .modalBG {
@@ -175,7 +173,8 @@
 @media screen and(max-width: 480px) {
 
     .exit {
-        top: 300px !important;
+        margin-left: 330px;
+        z-index: 100;
     }
 
     .modalBG {
@@ -184,7 +183,7 @@
     }
 
     .modalVideoParent {
-        margin-top: -90px !important;
+        margin-top: -80px !important;
 
         .videoDescription {
             margin-top: -90px;
@@ -199,7 +198,7 @@
 @media screen and(max-width: 420px) {
 
     .exit {
-        top: 350px !important;
+        margin-left: 260px;
     }
 
     .modalBG {
@@ -220,17 +219,10 @@
     }
 }
 
-@media screen and(max-width: 417px) {
-
-    .exit {
-        top: 300px !important;
-    }
-}
-
 @media screen and(max-width: 400px) {
 
     .exit {
-        top: 330px !important;
+        margin-left: 200px;
     }
 
     .modalBG {
